# cpp-binary

./: CMakeLists.txt  Makefile.am  README  configure.ac  crap  crap.cc  test  test.cc  warnings
doc/: docgen.in
include/: Makefile.am
src/: Makefile.am  binfo.cc  eclipses.cc  edisc.cc  gyrate.cc  jdotgr.cc  kepler_omega.cc  mr_main_sequence.cc  mr_wd_eggleton.cc  mr_wd_nauenberg.cc  orbital_ang_mom.cc  orbital_omega.cc  orbital_period.cc  orbital_separation.cc  rcirc.cc  rmin.cc  vellipse.cc  wdsolve.cc  zeta_main_sequence.cc  zeta_wd_eggleton.cc  zeta_wd_nauenberg.cc
